# medium-chatbot-deploy

./: .env.example  .gitignore  Dockerfile  README.md  deployment.yml  pyproject.toml  render.yaml  requirements.txt  simple_api.py  simple_deployment.yml  test-deployment.yml  test_simple.py  test_workflows.py  test_workflows_offline.py  workflows.db
app/: __init__.py  config.py  tools.py  workflows.py
data/: articles_manifest.json  tech_index.json
medium_chatbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
