[project]
name = "medium-chatbot"
version = "0.1.0"
description = "Medium Articles AI Chatbot for LlamaCloud deployment"
authors = [{name = "Lakshmi narayana .U"}]
requires-python = ">=3.9,<4.0"
dependencies = [
    "llama-index>=0.14.0",
    "llama-cloud-services>=0.6.70",
    "llama-index-llms-openai>=0.6.0", 
    "llama-index-embeddings-openai>=0.5.0",
    "llama-index-workflows>=2.8.0",
    "llama-deploy>=0.3.15",
    "beautifulsoup4",
    "python-dateutil",
    "nest-asyncio",
]

[tool.llamactl]

[tool.llamactl.workflows]
discovery = "app.workflows:discovery_workflow"
tech-explorer = "app.workflows:tech_explorer_workflow"
analytics = "app.workflows:analytics_workflow"

[tool.llamactl.ui]
enabled = false

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*"]