[project]
name = "medium-chatbot"
version = "0.1.0"
description = "Medium Articles AI Chatbot for LlamaCloud deployment"
authors = [{name = "Lakshmi narayana .U"}]
requires-python = ">=3.9,<4.0"
dependencies = [
    "llama-index",
    "llama-cloud-services",
    "llama-index-llms-openai", 
    "llama-index-embeddings-openai",
    "fastapi",
    "uvicorn",
    "beautifulsoup4",
    "python-dateutil",
    "nest-asyncio",
]

[project.scripts]
start = "simple_api:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*"]